style.css
:root {
  --blackish:rgb(28, 28, 41);
}

* {
  font-family: 'Rubik Mono One', sans-serif;
  margin: 0;
}

body  {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  background-color: rgb(218, 77, 105);
}

nav {
  width: 100vw;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}


h1 {
  font-size: 5rem;
  color:orange;
}

.scoreboard {
  display: flex;
  align-items: center;
  height: 150px;
  font-size: 50px;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.game-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  width: 500px;
  height: 500px;
  border: 5px solid var(--blackish);
}

.board-button {
  font-family: sans-serif;
  font-size: 150px;
  display: flex;
  justify-content: center;
  background-color: blanchedalmond;
}

.one, .two, .three, .four, .five, .six {
  border-bottom: 2px solid  var(--blackish);;
}

.one, .two, .four, .five, .seven, .eight {
  border-right: 2px solid  var(--blackish);;
}

.reset {
  height: 80px;
  width: 160px;
  border: 4px solid var(--blackish);
  border-radius: 4px;
  margin-top: 30px;
  background-color: orange;
  font-size: 25px;
}

footer {
  width: 100vw;
  text-align: center;
  margin-top: auto;
  margin-bottom:  0px;
}

footer a {
  font-size: 8px;
  color: black;
}

@media only screen and (max-width: 770px) {
  h1 {
    font-size: 10vw;
  }

  .game-grid {
    width: 300px;
    height: 300px;
  }

  .board-button {
    font-size: 90px;
  }

  .scoreboard {
    font-size: 7vw;
  }
}

